--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@ body {
   max-width: 600px;
 }
 
+.units.active {
+  cursor: pointer;
+  color: #0d6efd;
+}
+
 .card-footer {
   text-align: left;
 }
