--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
 body {
-  font-family: "Roboto Flex", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .container {
   margin: 50px auto;
-  max-width: 600px;
+  max-width: 650px;
 }
 
 .units.active {
@@ -14,6 +14,10 @@ body {
 
 #forecast img {
   width: 70px;
+}
+
+#forecast strong {
+  font-size: 18px;
 }
 
 .card-footer {
